--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>first Test 01</title>
+	<title>pullreq Test 01</title>
 </head>
 <body>
 	<p>なにぬねの</p>
